--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.6"
 pandas = "^0.24"
 voluptuous = "^0.11"
 dataclasses = "^0.6"
+numpy = "^1.18.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
