--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pandas = "^0.24"
 voluptuous = "^0.11"
 dataclasses = "^0.6"
 numpy = "^1.18.1"
+pytest = "^5.3.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -18,6 +19,7 @@ black = "=19.3b0"
 pre-commit = "^1"
 publish_sphinx_docs = "^1.0"
 sphinx = "^1.8"
+autopep8 = "^1.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
