--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pre-commit = "^1"
 publish_sphinx_docs = "^1.0"
 sphinx = "^1.8"
 autopep8 = "^1.5"
+pylint = "^2.4.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
